--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 
-		<link rel="stylesheet" type="text/css" href="https://vmware--dev3.cs67.my.salesforce.com/resource/1530535804000/Snapin_ClarityCss">
+		<link rel="stylesheet" type="text/css" href="https://www-test11.vmware.com/content/dam/digitalmarketing/vmware/en/files/srccode/assets/css/clarity.css">
 		
     </head>
     <body>
