--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 
-		<link rel="stylesheet" type="text/css" href="https://www-test11.vmware.com/content/dam/digitalmarketing/vmware/en/files/srccode/assets/css/clarity.css">
+		<link rel="stylesheet" type="text/css" href="http://dev3-vmware.cs67.force.com/LiveAgent/resource/1530530157000/Snapin_ClarityCss">
 		
     </head>
     <body>
