--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		
     </head>
     <body>
-        <script type='text/javascript' src='https://service.force.com/embeddedservice/4.1/esw.min.js'></script>
-        <script type='text/javascript'>
+        <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
+            <script type='text/javascript'>
         var initESW = function(gslbBaseURL) {
         embedded_svc.settings.displayHelpButton = true; //Or false
         embedded_svc.settings.language = 'en-US'; //For example, enter 'en' or 'en-US'
@@ -156,8 +156,7 @@
                 }];
             }
 
-
-embedded_svc.init('https://vmware--DEV2.cs51.my.salesforce.com', 'https://dev2-vmstarcommunity.cs51.force.com/', gslbBaseURL, '00D4B000000D2NP', 'VMware_Cloud_on_AWS', { baseLiveAgentContentURL: 'https://c.la1-c1cs-phx.salesforceliveagent.com/content', deploymentId: '5724B000000CaSe', buttonId: '5734B000000CaZt', baseLiveAgentURL: 'https://d.la1-c1cs-phx.salesforceliveagent.com/chat', eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I4B0000008OIoUAM_1629a5b3d0c'}); };if (!window.embedded_svc) { var s = document.createElement('script'); s.setAttribute('src', 'https://vmware--DEV2.cs51.my.salesforce.com/embeddedservice/4.1/esw.min.js'); s.onload = function() { initESW(null); }; document.body.appendChild(s); } else { initESW('https://service.force.com'); }</script>
+embedded_svc.init('https://vmware--DEV3.cs67.my.salesforce.com', 'https://dev3-vmware.cs67.force.com/LiveAgent', gslbBaseURL, '00D0n0000000XOR', 'EPG', { baseLiveAgentContentURL: 'https://c.la1-c2cs-iad.salesforceliveagent.com/content', deploymentId: '5720n0000004CCM', buttonId: '5730n0000004CHC', baseLiveAgentURL: 'https://d.la1-c2cs-iad.salesforceliveagent.com/chat', eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I0n0000004C9hEAE_163b01cb121', isOfflineSupportEnabled: false}); };if (!window.embedded_svc) { var s = document.createElement('script'); s.setAttribute('src', 'https://vmware--DEV3.cs67.my.salesforce.com/embeddedservice/5.0/esw.min.js'); s.onload = function() { initESW(null); }; document.body.appendChild(s); } else { initESW('https://service.force.com'); }</script>
 
     </body>
 </HTML>
