--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 
-		<link rel="stylesheet" type="text/css" href="https://vmware--dev3.cs67.my.salesforce.com/resource/1530535804000/Snapin_ClarityCss">
+		<link rel="stylesheet" type="text/css" href="http://dev3-vmware.cs67.force.com/LiveAgent/resource/1530530157000/Snapin_ClarityCss">
 		
     </head>
     <body>
-       <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
+        <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
             <script type='text/javascript'>
-            var initESW = function(gslbBaseURL) {
+        var initESW = function(gslbBaseURL) {
             embedded_svc.settings.displayHelpButton = true; //Or false
             embedded_svc.settings.language = 'en-US'; //For example, enter 'en' or 'en-US'
             
