--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 	    <style>
-	    @import url("http://dev3-vmware.cs67.force.com/LiveAgent/resource/1530530157000/Snapin_ClarityCss");
+	    @import url("https://dev3-vmware.cs67.force.com/LiveAgent/resource/1530530157000/Snapin_ClarityCss");
 	    </style>
             <script type='text/javascript'>
         var initESW = function(gslbBaseURL) {
