--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 
-		<link rel="stylesheet" type="text/css" href="http://perf-vmware.cs66.force.com/LiveAgent/resource/1530700305000/Snapin_ClarityCss">
+		<link rel="stylesheet" type="text/css" href="https://perf-vmware.cs66.force.com/LiveAgent/resource/1530700305000/Snapin_ClarityCss">
 	    
 		
     </head>
